CSS 수정 ㅡ INDEX CSRF토큰값 HIDDEN 설정

--- a/src/main/webapp/resources/css/medile.css
+++ b/src/main/webapp/resources/css/medile.css
@@ -223,7 +223,7 @@ ul.w3l-ratings li,.w3l-ratings a{
     list-style: none;
 }
 ul.w3l-ratings li i ,.w3l-ratings a i{
-    color: #ff8d1b;
+    color: black;
 }
 /*---browse-grid-----*/
 .w3l-movie-gride-agile {
